--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -3,3 +3,5 @@
 
 /model/faster_rcnn_resnet50_v1_640x640_1.tar.gz
 /model/faster_rcnn_resnet50_v1_640x640_1
+/model/faster_rcnn_inception_resnet_v2_1024x1024_1
+/model/faster_rcnn_inception_resnet_v2_1024x1024_1.tar.gz
